--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <center><a class="nav-link active text-light" aria-current="page" href="#"> Powered by, Sreebala Sci.Engrg</a></center>
           </li>
           <li class="nav-item">
-            <center><a class="nav-link text-light" href="#" style="background-color: crimson;">user info :  Mayilvahanam Ferry</a></center>
+            <center><a class="nav-link text-light" href="#" style="background-color: crimson;">user info :  Mayilvahanam Ferry Service</a></center>
           </li>
         </ul>
         <center><span class="navbar-text text-light">
