--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
   </nav>
     <div class="right" style="width: 100%; background-color: aqua; height: 371px;" >
       <div class="slideshow-container">
-
-        <div class="mySlides fade_b">
+        <img src="Untitled-1.gif" style="width:100%; height: 371px;" class="img-fluid">
+        <!-- <div class="mySlides fade_b">
           
           <img src="1.png" style="width:100%; height: 371px;" class="img-fluid">
         </div>
@@ -80,7 +80,7 @@
           <span class="dot" style="display: none;"></span> 
           <span class="dot" style="display: none;"></span> 
         </div>   
-    </div>
+    </div> -->
 
     <!-- <div class="scroll" style="background-color: rgb(189, 9, 69); margin: 0; height: 40px;">
         <h3 style="text-align: center; color: rgb(255, 255, 255);  padding: 3px; margin: 6px;">From Wikipedia, the free encyclopedia about Kunjithai
