--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 
 <div class="companymain">
     <div class="logo" style=" height: 70px; width: 10%; float: left; border-radius: 0px;">
-            <center><img src="SBGLOGO.png" alt="image currently unavailable" style=" width: 80%; margin: auto; align-items: center;" class="img-fluid"></center>
+            <center><img src="Sreebala logo.gif" alt="image currently unavailable" style=" width: 80%; margin: auto; align-items: center;" class="img-fluid"></center>
     </div>
     <div class="matter" style=" height: 80px; width: 78%; float: left; text-align: center;">
       <div class="roll" style="background-color: rgb(255, 255, 255);" >
